refactor: address linter issues